--- a/package.json
+++ b/package.json
@@ -14,12 +14,14 @@
     "test:coverage": "vitest --coverage"
   },
   "dependencies": {
+    "@fawmi/vue-google-maps": "^0.9.72",
     "@pinia/nuxt": "^0.10.1",
     "@tailwindcss/vite": "^4.0.12",
     "nuxt": "^3.15.4",
     "pinia": "^3.0.1",
     "tailwindcss": "^4.0.12",
     "vue": "^3.5.13",
+    "vue-google-autocomplete": "^1.1.4",
     "vue-router": "^4.5.0"
   },
   "devDependencies": {
