--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "happy-dom": "^17.4.4",
     "playwright-core": "^1.51.1",
     "prettier": "^3.5.3",
+    "vite": "^6.3.2",
     "vite-svg-loader": "^5.1.0",
     "vitest": "^3.0.9"
   }
