--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
   "dependencies": {
     "@pinia/nuxt": "^0.10.1",
     "@tailwindcss/vite": "^4.0.12",
+    "@vite-pwa/nuxt": "^1.0.0",
     "nuxt": "^3.15.4",
     "pinia": "^3.0.1",
     "tailwindcss": "^4.0.12",
