--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@pinia/nuxt": "^0.10.1",
     "@tailwindcss/vite": "^4.0.12",
     "nuxt": "^3.15.4",
+    "opencage-api-client": "^1.1.0",
     "pinia": "^3.0.1",
     "tailwindcss": "^4.0.12",
     "vue": "^3.5.13",
