#55 Add dayjs lib

--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@pinia/nuxt": "^0.10.1",
     "@tailwindcss/vite": "^4.0.12",
     "@vite-pwa/nuxt": "^1.0.0",
+    "dayjs": "^1.11.13",
     "nuxt": "^3.15.4",
     "opencage-api-client": "^1.1.0",
     "pinia": "^3.0.1",
