--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "pinia": "^3.0.1",
     "tailwindcss": "^4.0.12",
     "vue": "^3.5.13",
+    "vue-qrcode": "^2.2.2",
     "vue-router": "^4.5.0"
   },
   "devDependencies": {
