--- a/package.json
+++ b/package.json
@@ -14,11 +14,15 @@
     "test:coverage": "vitest --coverage"
   },
   "dependencies": {
+    "@nuxt/image": "^1.10.0",
     "@pinia/nuxt": "^0.10.1",
     "@tailwindcss/vite": "^4.0.12",
     "@vite-pwa/nuxt": "^1.0.0",
     "dayjs": "^1.11.13",
     "nuxt": "^3.15.4",
+    "nuxt-gtag": "^3.0.2",
+    "nuxt-schema-org": "^5.0.5",
+    "nuxt-security": "^2.2.0",
     "opencage-api-client": "^1.1.0",
     "pinia": "^3.0.1",
     "tailwindcss": "^4.0.12",
@@ -34,6 +38,7 @@
     "eslint-config-prettier": "^10.1.1",
     "eslint-plugin-prettier": "^5.2.3",
     "happy-dom": "^17.4.4",
+    "nuxt-yandex-metrika": "^1.2.9",
     "playwright-core": "^1.51.1",
     "prettier": "^3.5.3",
     "vite": "^6.3.2",
